--- a/test-cases.yml
+++ b/test-cases.yml
@@ -52,7 +52,9 @@
     Открыта форма регистрации
   test-data: |
     Email = polly@com  
-    Остальные поля заполнены корректно
+    Nickname = polly_test  
+    Пароль = Testpass123!  
+    Подтверждение пароля = Testpass123!
   steps:
     - Заполнить поля
     - Нажать кнопку "Submit"
@@ -66,6 +68,8 @@
   prerequisites: |
     Открыта форма регистрации
   test-data: |
+    Nickname = polly_test  
+    Email = polly@example.com
     Пароль = Testpass123!  
     Подтверждение = Testpass124!
   steps:
@@ -81,6 +85,8 @@
   prerequisites: |
     Открыта форма регистрации
   test-data: |
+    Nickname = polly_test  
+    Email = polly@example.com
     Пароль = Testpass123  
     Подтверждение пароля = Testpass123
   steps:
@@ -97,6 +103,9 @@
     Открыта форма регистрации
   test-data: |
     Nickname = Полина
+    Email = polly@example.com
+    Пароль = Testpass123!
+    Подтверждение пароля = Testpass123!
   steps:
     - Ввести nickname кириллицей
     - Заполнить остальные поля корректно
@@ -111,7 +120,7 @@
   prerequisites: |
     Открыта форма регистрации
   test-data: |
-    Любой валидный пароль
+    Пароль = Testpass123!
   steps:
     - Ввести пароль
     - Нажать на иконку-глаз
@@ -256,6 +265,21 @@
     Открывается страница профиля текущего пользователя
 
 - summary: |
+    Проверка переключения вкладок Statistics и Completed Games на странице профиля
+  requirement: |
+    Пользователь должен иметь возможность переключаться между вкладками
+  prerequisites: |
+    Пользователь авторизован и находится на странице своего профиля
+  test-data: |
+    Не требуется
+  steps:
+    - Открыть страницу профиля
+    - Нажать на вкладку "Completed Games"
+    - Нажать на вкладку "Statistics"
+  expected-result: |
+    После первого клика отображается список завершённых игр, после второго — статистика (rank, elo_rating, games_played и heatmap)
+
+- summary: |
     Проверка сохранения авторизации при обновлении страницы
   requirement: |
     При обновлении страницы пользователь остаётся авторизованным
@@ -268,39 +292,6 @@
     - Обновить страницу браузера
   expected-result: |
     Пользователь остаётся в системе
-
-- summary: |
-    Проверка автоматической авторизации после регистрации
-  requirement: |
-    После успешной регистрации пользователь автоматически входит в систему
-  prerequisites: |
-    Открыта форма регистрации
-  test-data: |
-    Nickname = test_user_02  
-    Email = test02@example.com  
-    Пароль = Testpass123!  
-    Подтверждение = Testpass123!
-  steps:
-    - Ввести все поля
-    - Нажать "Submit"
-  expected-result: |
-    Пользователь попадает на главную страницу и авторизован
-
-- summary: |
-    Проверка невозможности входа при отключенном интернете
-  requirement: |
-    При отсутствии соединения с интернетом должна отображаться ошибка соединения
-  prerequisites: |
-    Открыта форма входа
-  test-data: |
-    Email = polly@example.com  
-    Пароль = Testpass123!
-  steps:
-    - Отключить интернет
-    - Ввести email и пароль
-    - Нажать "Submit"
-  expected-result: |
-    Отображается сообщение об ошибке соединения
 
 - summary: |
     Проверка кликабельности логотипа Codebattle
@@ -329,7 +320,35 @@
     Открывается страница с пользовательским рейтингом
 
 - summary: |
-    Проверка переключателей рейтинга (Week, Month, All time)
+    Проверка работы пагинации на странице рейтинга пользователей
+  requirement: |
+    Кнопки пагинации должны переключать страницы списка пользователей
+  prerequisites: |
+    Загружена страница "Users rating" с более чем 20 записями
+  test-data: |
+    Users per page = 20
+  steps:
+    - Нажать кнопку ">" (Next) для перехода на вторую страницу
+    - Нажать кнопку "<" (Prev) для возврата на первую страницу
+  expected-result: |
+    При нажатии ">" список пользователей обновляется на записи 21–40, при нажатии "<" возвращается список 1–20
+
+- summary: |
+    Проверка фильтрации отображения ботов на странице рейтинга пользователей
+  requirement: |
+    Чекбокс "With bots" должен включать и исключать ботов из списка рейтинга
+  prerequisites: |
+    Загружена страница "Users rating"
+  test-data: |
+    Варианты: чекбокс установлен и снят
+  steps:
+    - Установить чекбокс "With bots" и дождаться обновления списка
+    - Снять чекбокс "With bots" и дождаться обновления списка
+  expected-result: |
+    При установленном чекбоксе в таблице появляются пользователи-боты; при снятом — боты исчезают из списка  
+
+- summary: |
+    Проверка переключателей рейтинга (weekly, monthly, total)
   requirement: |
     Пользователь может переключать отображение рейтинга по неделе, месяцу и за всё время
   prerequisites: |
@@ -337,11 +356,16 @@
   test-data: |
     Не требуется
   steps:
-    - Нажать "Week"
-    - Нажать "Month"
-    - Нажать "All time"
+    - Нажать "weeklyy"
+    - Нажать "monthly"
+    - Нажать "total"
   expected-result: |
     Рейтинг обновляется согласно выбранному фильтру
+
+
+
+
+
 
 - summary: |
     Проверка недоступности приватных разделов до авторизации
