--- a/testing-report.yml
+++ b/testing-report.yml
@@ -112,7 +112,7 @@
   status: pass
 
 - summary: |
-    Проверка переключателей рейтинга (weekly, monthly, total)
+    Проверка переключателей рейтинга (week, month, all)
   status: pass
 
 - summary: |
@@ -169,4 +169,36 @@
 
 - summary: |
     Проверка адаптивности интерфейса на мобильных экранах
+  status: pass
+
+- summary: |
+    Проверка навигации на вкладку «Tournaments»
+  status: pass
+
+- summary: |
+    Проверка открытия страницы турнира по кнопке «Show»
+  status: pass
+
+- summary: |
+    Проверка появления кнопки «Join» на странице турнира и возможности присоединиться
+  status: pass
+
+- summary: |
+    Проверка навигации на завершённые турниры
+  status: pass
+
+- summary: |
+    Проверка навигации на вкладку «History»
+  status: pass
+
+- summary: |
+    Проверка отображения списка завершённых битв на вкладке «History»
+  status: pass
+
+- summary: |
+    Проверка открытия подробностей битвы по кнопке «Show» в истории
+  status: pass
+
+- summary: |
+    Проверка отображения кода участников и результатов в режиме просмотра битвы
   status: pass
