--- a/test-cases.yml
+++ b/test-cases.yml
@@ -493,7 +493,7 @@
     При установленном чекбоксе в таблице появляются пользователи-боты; при снятом — боты исчезают из списка  
 
 - summary: |
-    Проверка переключателей рейтинга (weekly, monthly, total)
+    Проверка переключателей рейтинга (week, month, all)
   requirement: |
     Пользователь может переключать отображение рейтинга по неделе, месяцу и за всё время
   prerequisites: |
@@ -705,3 +705,111 @@
     - Открыть главную страницу и несколько разделов
   expected-result: |
     Элементы интерфейса адаптированы (меню, кнопки, текст читабелен)
+
+- summary: |
+    Проверка навигации на вкладку «Tournaments»
+  requirement: |
+    По клику на вкладку «Tournaments» должна открываться соответствующая секция с турнирами
+  prerequisites: |
+    Пользователь авторизован и находится на главной странице лобби
+  test-data: |
+    Не требуется
+  steps:
+    - Нажать на вкладку «Tournaments» в верхней навигации
+  expected-result: |
+    Содержание становится видимым, а вкладка «Tournaments» подсвечивается
+
+- summary: |
+    Проверка открытия страницы турнира по кнопке «Show»
+  requirement: |
+    По клику на кнопку «Show» рядом с любым турниром должно открываться окно с деталями турнира
+  prerequisites: |
+    Открыта вкладка «Tournaments»
+  test-data: |
+    Не требуется
+  steps:
+    - В списке «Live tournaments» нажать кнопку «Show» на любом турнире
+  expected-result: |
+    Открывается страница или модальное окно с подробным описанием выбранного турнира (название, статус, чат, рейтинг)
+
+- summary: |
+    Проверка появления кнопки «Join» на странице турнира и возможности присоединиться
+  requirement: |
+    На странице турнира должна отображаться кнопка «Join», позволяющая пользователю стать участником
+  prerequisites: |
+    Открылось окно деталей турнира
+  test-data: |
+    Не требуется
+  steps:
+    - Найти кнопку «Join» на странице турнира
+    - Нажать кнопку «Join»
+  expected-result: |
+    Пользователь добавлен в список участников, кнопка «Join» меняет состояние на «Leave»
+
+- summary: |
+    Проверка навигации на завершённые турниры
+  requirement: |
+    На вкладке «Tournaments» есть ссылка «Tournaments Info», ведущая к списку завершённых турниров
+  prerequisites: |
+    Открыта вкладка «Tournaments»
+  test-data: |
+    Не требуется
+  steps:
+    - Прокрутить страницу до раздела «Completed tournaments»
+    - Нажать на ссылку «Tournaments Info»
+  expected-result: |
+    Открывается секция или страница со списком всех завершённых турниров, каждый из которых имеет кнопку «Show» для просмотра деталей
+
+- summary: |
+    Проверка навигации на вкладку «History»
+  requirement: |
+    Пользователь должен иметь возможность перейти на вкладку «History» без перезагрузки страницы
+  prerequisites: |
+    Пользователь авторизован и находится на главной странице
+  test-data: |
+    Не требуется
+  steps:
+    - Нажать на вкладку «History» в верхней навигации
+  expected-result: |
+    Содержимое главной секции должно смениться списком завершённых битв, вкладка «History» должна подсветиться
+
+- summary: |
+    Проверка отображения списка завершённых битв на вкладке «History»
+  requirement: |
+    На вкладке «History» должен быть виден список прошедших игр с колонками Level, Players, Date, Actions
+  prerequisites: |
+    Пользователь перешёл на вкладку «History»
+  test-data: |
+    Не требуется
+  steps:
+    - Убедиться, что на странице отображается таблица с заголовками «Level», «Players», «Date», «Actions»
+    - Прокрутить список вниз до конца
+  expected-result: |
+    Таблица содержит записи всех завершённых битв; при скролле под списком отображается общее число игр
+
+- summary: |
+    Проверка открытия подробностей битвы по кнопке «Show» в истории
+  requirement: |
+    Кнопка «Show» в каждой строке истории должна открывать подробный экран битвы
+  prerequisites: |
+    Пользователь находится на вкладке «History»
+  test-data: |
+    Не требуется
+  steps:
+    - Нажать «Show» в любой строке таблицы истории
+  expected-result: |
+    Открывается экран битвы: видны панель TASK, OUTPUT, чат, и статистика участников
+
+- summary: |
+    Проверка отображения кода участников и результатов в режиме просмотра битвы
+  requirement: |
+    В режиме просмотра битвы по истории должны быть видны редакторы с кодом обеих сторон и их результаты (output)
+  prerequisites: |
+    Пользователь нажал «Show» на вкладке «History»
+  test-data: |
+    Не требуется
+  steps:
+    - Переключиться на вкладку «Output» в верхней панели битвы
+    - Вернуться на вкладку «Task»
+  expected-result: |
+    На вкладке «Task» отображается исходный код задачи и редактор, на вкладке «Output» — результат выполнения кода соперника; переключение вкладок проходит без перезагрузки страницы
